# davidfifer-portfolio

./: README.md
python/csv_cleaner/: .gitignore
python/csv_data_cleaner/: LICENSE  README.md  pyproject.toml
python/csv_data_cleaner/src/csv_cleaner/: __main__.py  cleaner.py  cli.py  config_loader.py  exporter.py  profiler.py  startup.py
python/csv_data_cleaner/src/csv_cleaner/config/: logging_config.py  logging_setup.py  rules.json  rules.yml
python/csv_data_cleaner/tests/: conftest.py  test_bad_numeric_values.py  test_cli.py  test_duplicates.py  test_empty_rows.py  test_extra_columns.py  test_fix_data_types.py  test_invalid_dates.py  test_missing_headers.py  test_missing_required_columns.py  test_missing_values.py  test_normalize_columns.py  test_row_filters.py  test_trim_strings.py  test_unnamed_headers.py
python/csv_data_cleaner/tests/config/: rules.yaml
python/csv_data_cleaner/tests/data/: README.md  bad_numeric_values.csv  duplicates.csv  empty_rows.csv  extra_columns.csv  fix_data_types.csv  invalid_dates.csv  missing_headers.csv  missing_required_columns.csv  missing_values.csv  normalize_columns.csv  row_filters.csv  trim_strings.csv  unnamed_headers.csv  valid_baseline.csv
python/file_organizer/: README.md  pyproject.toml  requirements.txt
python/file_organizer/config/: config.json  logging.conf
python/file_organizer/src/: __init__.py  file_organizer.py
python/file_organizer/src/utils/: config.py  dry_run_decorator.py
python/file_organizer/tests/: python-tests.yml  test_file_sorter_pytest.py  test_file_sorter_unittest.py
